Fix the vertical line alignment

--- a/packages/block-editor/src/components/block-navigation/style.scss
+++ b/packages/block-editor/src/components/block-navigation/style.scss
@@ -201,7 +201,7 @@ $tree-item-height: 36px;
 			position: absolute;
 			top: -1px;
 			bottom: -2px;
-			right: 1px;
+			right: -1px;
 			border-right: 2px solid $light-gray-900;
 		}
 
